# bilkom-python

./: LICENSE  README.md  bilkom.ipynb  bilkom.py  pyproject.toml  requirements.txt
.github/workflows/: build_and_publish.yml
